Getting it to render

--- a/packages/tooling/fast-figma-plugin-msft/src/index.html
+++ b/packages/tooling/fast-figma-plugin-msft/src/index.html
@@ -6,6 +6,8 @@
     </head>
 
     <body>
-        <theme-designer></theme-designer>
+        <fast-design-system-provider base-layer-luminance="1">
+            <react-app></react-app>
+        </fast-design-system-provider>
     </body>
 </html>
